# CS32_P2

./: -D_DEBUG  .gitignore  CMakeLists.txt  MakeFile  Makefile  README.md  main.cpp
dependencies/glfw/: CMakeLists.txt
dependencies/headers/: gl.h
dependencies/headers/glad/: glad.h
dependencies/src/: glad.c
shaders/: fragment.frag  text.frag  vertex.vert
src/: main.cpp  test.cpp  textrenderer.h
src/lib/: entity.h  handler.cpp  handler.h  imagerenderer.cpp  imagerenderer.h  renderer.cpp  renderer.h  shaderprog.cpp  shaderprog.h  textrenderer.cpp  textrenderer.h
